# vanishing-points

./: CMakeLists.txt  README.md  main.cpp
images/: config.txt
